{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 34,
  "lineage": "b87a7dfd-153b-c2a0-3f2a-2a2b575eb538",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-nva-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1/routes/route-to-nva-spoke1",
            "name": "route-to-nva-spoke1",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke1",
            "route_table_name": "route-table-to-nva-spoke1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-to-nva-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2/routes/route-to-nva-spoke2",
            "name": "route-to-nva-spoke2",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke2",
            "route_table_name": "route-table-to-nva-spoke2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-to-nva-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
            "location": "westeurope",
            "name": "route-table-to-nva-spoke1",
            "resource_group_name": "rg-spoke1",
            "route": [],
            "subnets": [],
            "tags": {
              "topology": "hub-spoke"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-to-nva-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2",
            "location": "westeurope",
            "name": "route-table-to-nva-spoke2",
            "resource_group_name": "rg-spoke2",
            "route": [],
            "subnets": [],
            "tags": {
              "topology": "hub-spoke"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-nva",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-nva",
            "name": "subnet-nva",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-spoke1-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-workload",
            "name": "subnet-spoke1-workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke1",
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-spoke2-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
            "name": "subnet-spoke2-workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_subnet_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-workload",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke1",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-workload"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-to-nva-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_subnet.subnet-spoke1-workload",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_route_table_subnet_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/routeTables/route-table-to-nva-spoke2",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-to-nva-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_subnet.subnet-spoke2-workload",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9c7d4c72-2c58-46af-8023-76b021c01481",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "westeurope",
            "name": "vnet-hub",
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "172.16.0.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "33c90ed8-b88c-40a3-b992-ef2737097940",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "location": "westeurope",
            "name": "vnet-spoke1",
            "resource_group_name": "rg-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "dns_servers": [
              "172.16.0.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cb189ff5-e3a4-4023-adcd-c7e5efa86f8f",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "location": "westeurope",
            "name": "vnet-spoke2",
            "resource_group_name": "rg-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-hub-to-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet-peering-hub-to-spoke1",
            "name": "vnet-peering-hub-to-spoke1",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "resource_group_name": "rg-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-hub-to-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet-peering-hub-to-spoke2",
            "name": "vnet-peering-hub-to-spoke2",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "resource_group_name": "rg-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-spoke1-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/virtualNetworkPeerings/vnet-peering-spoke1-to-hub",
            "name": "vnet-peering-spoke1-to-hub",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke1",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet-peering-spoke2-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/virtualNetworkPeerings/vnet-peering-spoke2-to-hub",
            "name": "vnet-peering-spoke2-to-hub",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke2",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.254.157",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-hub",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "module": "module.vm-hub-nva",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "ojgh1hcyfsxunabdo0ycdqauqb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-nva"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_subnet.subnet-nva",
            "azurerm_virtual_network.vnet-hub",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "module": "module.vm-spoke1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "1ahmsm2mxcruboms32ttoclzia.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-workload"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "rg-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-nva",
            "azurerm_subnet.subnet-spoke1-workload",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm",
            "module.vm-spoke1.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "module": "module.vm-spoke2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "4wprrs3e2mrublony5s45kdprh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-workload"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "rg-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-nva",
            "azurerm_subnet.subnet-spoke2-workload",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "module.vm-hub-nva.azurerm_linux_virtual_machine.vm",
            "module.vm-hub-nva.azurerm_network_interface.nic_vm",
            "module.vm-hub-nva.azurerm_public_ip.pip_vm",
            "module.vm-spoke2.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    }
  ]
}